app/assets/stylesheets/primero/scopes_filters.scss
////////////////////////////////////////////////
// Scopes
////////////////////////////////////////////////

div.scope_bar {
  li.scope a {
    text-decoration: none;
  }
  li.scope ul li {
    padding: 5px;
  }
  li.scope ul li:hover{
    background-color: silver;
  }
  div.row > div {
    padding-left: 0px;
  }
  ul {
    margin-left: 0px;
    li {
      list-style: none;
      select {
        margin: 0;
      }
    }
  }
}

////////////////////////////////////////////////
// Index filters
////////////////////////////////////////////////

.filter_title {
  text-transform: uppercase;
  font-size: 0.8rem;
  padding: 8px 0 0 25px;
}

.index_filters {
  padding: 0;
  width: 225px;

  .filter {
    .filter-controls {
      padding: 10px 3px 20px 5px;
    }

    input[type="checkbox"] {
      margin: 0;
    }
  }

  h3 {
    font-size: $thirteen_px;
    padding: 20px 10px 0 10px;
    margin: 0;
    font-family: 'Roboto-Medium', sans-serif;
    border-top: 1px solid $stroke_green_color;
    text-transform: uppercase;
  }

  .panel {
    padding: 0 0 20px;
    border: none;
    background: #f1f5ec;
  }

  input[type="text"] {
    height: 1.5rem;
    margin-bottom: 0;
  }

  .field-controls-multi {
    overflow: hidden;
    overflow-y: scroll;
    height: 100px;
    margin: 5px 0 10px;
  }

  label {
    font-size: 0.8rem;
    margin-left: 0.3rem !important;

    &:not(.has_date) {
      margin-right: 0 !important;
    }
  }

  .chosen-container-single {
    width: 96% !important;
    margin: 10px 0 20px 4px !important;
  }
}

